# cahlter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: config.rs  lib.rs  main.rs  renderer.rs  summary.rs  util.rs  vault.rs
src/renderer/: askama_renderer.rs
src/summary/: file_tree_summarizer.rs  summary.pest  summary_file.rs
src/vault/: content.rs  summary.rs
src/vault/content/: chapter.rs  section.rs
src/vault/summary/: file_tree_summarizer.rs
templates/: header.html  index.html  index.js  main.css  sidebar.html
templates/css/: main.css  theme.css  variables.css
templates/sidebar/: chapter.html  section.html
tests/testdata/: header.html  header_empty_links.html  header_with_icons.html  index  sidebar.html  subchapter1
tests/testdata/sidebar/: chapter.html  chapter_nested.html  section.html
