[package]
name = "cahlter"
version = "0.1.0"
edition = "2021"
authors = ["Marcos Brito <marcos.brito0507@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marcos-brito/cahlter/"

[lib]
name = "cahlter"
path = "src/lib.rs"

[[bin]]
name = "cahlter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
pulldown-cmark = "0.9.3"
serde = {version="1.0.195", features=["derive"]}
serde_yaml = "0.9.30"
tempfile = "3.9.0"
